# http_client

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
examples/: CMakeLists.txt
examples/client_loader/: CMakeLists.txt
examples/client_loader/config/: config.yaml
examples/client_loader/include/client_loader/: config.h  connection.h  loader.h  manager.h  response_parser.h
examples/client_loader/source/: config.cpp  loader.cpp  main.cpp  manager.cpp  response_parser.cpp
examples/simple_client/: CMakeLists.txt  main.cpp
include/http_client/: common.h  header.h  request.h  response.h  status.h  version.h  zlib_helper.h
include/http_client/_private/: request.h  uri_parser.h
source/: header.cpp  request.cpp  response.cpp  status.cpp  version.cpp  zlib_helper.cpp
source/_private/: request.cpp
tests/: CMakeLists.txt  client_tests.cpp
